==> XH-1365/MY_EPS32/LuaNode-master/LuaNode_Esp32/LuaNode32/components/modules/node.c <==
#include <stdio.h>
#include "lauxlib.h"
#include "ldebug.h"
#include "ldo.h"
#include "lfunc.h"
#include "lmem.h"
#include "lobject.h"
#include "lstate.h"
#include "lualib.h"
#include "lopcodes.h"
#include "lstring.h"
#include "lundump.h"
#include "platform.h"
#include "lrotable.h"
#include "lrodefs.h"
#include "c_types.h"
#include "c_string.h"
#include "rom/uart.h"
#include "esp_system.h"
#include "esp_vfs.h"
#include "esp_log.h"
#define CPU80MHZ 80
#define CPU160MHZ 160
#define TAG	"node"
#define FS_NAME_MAX_LENGTH 255

static int node_info( lua_State* L )
{
	//uint32_t fs = system_get_flash_size();
	uint32_t fs = 2;
	uint8 id = 0;
	//bool succeed = system_get_chip_id(&id);
	uint32_t hs = lua_node_get_heap_size();
	lua_getglobal(L, "print");
	switch(fs) {
	case 0:
		lua_pushfstring(L, "flash_size=%s, chip_id=%d, heap_size=%d", "1MB", id, hs);
		break;
	case 1:
		lua_pushfstring(L, "flash_size=%s, chip_id=%d, heap_size=%d", "2MB", id, hs);
		break;
	case 2:
		lua_pushfstring(L, "flash_size=%s, chip_id=%d, heap_size=%d", "4MB", id, hs);
		break;
	case 3:
		lua_pushfstring(L, "flash_size=%s, chip_id=%d, heap_size=%d", "8MB", id, hs);
		break;
	case 4:
		lua_pushfstring(L, "flash_size=%s, chip_id=%d, heap_size=%d", "16MB", id, hs);
		break;
	default:
		lua_pushfstring(L, "flash_size=%s, chip_id=%d, heap_size=%d", "32MB", id, hs);
		break;
	}
	int err = lua_pcall(L, 1, 1, 0);
	if (err != 0) { ESP_LOGE(TAG, "lua_pcall failed:%s", lua_tostring(L, -1)); }
	lua_pop(L, 1) ;
	return 0;
}

static int node_chipid( lua_State* L )
{
  uint8 id = 0;
  //bool succeed = system_get_chip_id(&id);
  lua_getglobal(L, "print");
  lua_pushinteger(L, id);
  int err = lua_pcall(L, 1, 1, 0);
  if (err != 0) { ESP_LOGE(TAG, "lua_pcall failed:%s", lua_tostring(L, -1)); }
  lua_pop(L, 1) ;
  return 0;
}

static int node_flashsize( lua_State* L )
{
  //uint32_t sz = system_get_flash_size();
  uint32_t sz = 2;
  lua_getglobal(L, "print");
  switch(sz) {
	case 0:
		lua_pushstring(L, "1MB");
		break;
	case 1:
		lua_pushstring(L, "2MB");
		break;
	case 2:
		lua_pushstring(L, "4MB");
		break;
	case 3:
		lua_pushstring(L, "8MB");
		break;
	case 4:
		lua_pushstring(L, "16MB");
		break;
	default:
		lua_pushstring(L, "32MB");
		break;
  }
  //lua_pushinteger(L, sz);
  int err = lua_pcall(L, 1, 1, 0);
  if (err != 0) { ESP_LOGE(TAG, "lua_pcall failed:%s", lua_tostring(L, -1)); }
  lua_pop(L, 1) ;
  return 0;
}

static int node_heap( lua_State* L )
{
  uint32_t sz = lua_node_get_heap_size();
  lua_getglobal(L, "print");
  lua_pushinteger(L, sz);
  int err = lua_pcall(L, 1, 1, 0);
  if (err != 0) { ESP_LOGE(TAG, "lua_pcall failed:%s", lua_tostring(L, -1)); }
  lua_pop(L, 1) ;
  return 0;
}

static int writer(lua_State* L, const void* p, size_t size, void* u)
{
  UNUSED(L);
  FILE* file_fd = (FILE *)u;
  if (NULL == file_fd) {
    return 1;
  }
  ESP_LOGI(TAG, "get fd:%p,size:%d\n", file_fd, size);

  if (size != 0 && (size != fwrite((const char *)p, 1, size, file_fd)) ) {
    return 1;
  }
  ESP_LOGI(TAG, "write fd:%p,size:%d\n", file_fd, size);
  return 0;
}

static int node_compile( lua_State* L )
{
  Proto* f;
  FILE* file_fd = NULL;
  size_t len;
  const char *fname = luaL_checklstring( L, 1, &len );
  if ( len > FS_NAME_MAX_LENGTH ) {
    return luaL_error(L, "filename too long");
  }

  char output[FS_NAME_MAX_LENGTH];
  c_strcpy(output, fname);
  // check here that filename end with ".lua".
  if (len < 4 || (c_strcmp( output + len - 4, ".lua") != 0) ) {
    return luaL_error(L, "not a .lua file");
  }

  output[c_strlen(output) - 2] = 'c';
  output[c_strlen(output) - 1] = '\0';
  ESP_LOGI(TAG, "%s", output);
  ESP_LOGI(TAG, "\n");
  if (luaL_loadfsfile(L, fname) != 0) {
    return luaL_error(L, lua_tostring(L, -1));
  }

  f = toproto(L, -1);

  int stripping = 1;      /* strip debug information? */

  file_fd = fopen(output, "w+");
  if (file_fd == NULL) {
    return luaL_error(L, "cannot open/write to file");
  }

  lua_lock(L);
  int result = luaU_dump(L, f, writer, file_fd, stripping);
  lua_unlock(L);

  if (fflush(file_fd) < 0) {   // result codes aren't propagated by flash_fs.h
    // overwrite Lua error, like writer() does in case of a file io error
    result = 1;
  }
  fclose(file_fd);
  file_fd = NULL;

  if (result == LUA_ERR_CC_INTOVERFLOW) {
    return luaL_error(L, "value too big or small for target integer type");
  }
  if (result == LUA_ERR_CC_NOTINTEGER) {
    return luaL_error(L, "target lua_Number is integral but fractional value found");
  }
  if (result == 1) {    // result status generated by writer() or fs_flush() fail
    return luaL_error(L, "writing to file failed");
  }

  return 0;
}
