==> Nicholas3388/LuaNode/LuaNode_Esp32/LuaNode32/components/modules/node.c <==
#include "c_types.h"
#include "lauxlib.h"
#include "ldebug.h"
#include "ldo.h"
#include "lfunc.h"
#include "lmem.h"
#include "lobject.h"
#include "lopcodes.h"
#include "lrodefs.h"
#include "lrotable.h"
#include "lstate.h"
#include "lstring.h"
#include "lualib.h"
#include "lundump.h"
#include "modules.h"
#include "platform.h"
#include "c_string.h"
#include "rom/uart.h"
#include "user_interface.h"
#include "bt.h"
#include "esp_misc.h"
#include "esp_system.h"
#include "esp_wifi.h"
#include "flash_fs.h"
#include "user_version.h"
#include "esp_bt_main.h"
#include "esp_spi_flash.h"
#include "vfs.h"
#define CPU80MHZ 80
#define CPU160MHZ 160

static int node_info(lua_State* L)
{
    esp_chip_info_t chip_info;
    esp_chip_info(&chip_info);

    size_t fs = spi_flash_get_chip_size();

    uint8_t mac_address = 0;
    esp_err_t mac_address_read_ok = esp_efuse_mac_get_default(&mac_address);
    if (mac_address_read_ok != ESP_OK)
    {
        os_printf("Unable to get default MAC address (chip I/D): %d", mac_address_read_ok);
    }

    uint32_t hs = esp_get_free_heap_size();

    lua_getglobal(L, "print");
    lua_pushfstring(L, "model=%d, cores=%d, rev=%d, flash_size=%sB, chip_id/mac_address=%X, free_heap_size=%d",
                    chip_info.model, chip_info.cores, chip_info.revision, fs, mac_address, hs);

    int err = lua_pcall(L, 1, 1, 0);
    if (err != 0)
    {
        os_printf("lua_pcall failed:%s", lua_tostring(L, -1));
    }
    lua_pop(L, 1);
    return 0;
}

static int node_chipid(lua_State* L)
{
    uint8_t mac_address = 0;
    esp_err_t mac_address_read_ok = esp_efuse_mac_get_default(&mac_address);
    if (mac_address_read_ok != ESP_OK)
    {
        os_printf("Unable to get default MAC address (chip ID): %d", mac_address_read_ok);
    }
    lua_getglobal(L, "print");
    lua_pushfstring(L, "%X", mac_address);
    int err = lua_pcall(L, 1, 1, 0);
    if (err != 0)
    {
        os_printf("lua_pcall failed:%s", lua_tostring(L, -1));
    }
    lua_pop(L, 1);
    return 0;
}

static int node_flashsize(lua_State* L)
{
    size_t fs = spi_flash_get_chip_size();
    lua_getglobal(L, "print");
    lua_pushfstring(L, "%dB", fs);
    int err = lua_pcall(L, 1, 1, 0);
    if (err != 0)
    {
        os_printf("lua_pcall failed:%s", lua_tostring(L, -1));
    }
    lua_pop(L, 1);
    return 0;
}

static int node_heap(lua_State* L)
{
    uint32_t sz = esp_get_free_heap_size();
    lua_getglobal(L, "print");
    lua_pushinteger(L, sz);
    int err = lua_pcall(L, 1, 1, 0);
    if (err != 0)
    {
        os_printf("lua_pcall failed:%s", lua_tostring(L, -1));
    }
    lua_pop(L, 1);
    return 0;
}

static int writer(lua_State* L, const void* p, size_t size, void* u)
{
    UNUSED(L);
    int file_fd = *((int*)u);
    if ((FS_OPEN_OK - 1) == file_fd)
        return 1;
    NODE_DBG("get fd:%d,size:%d\n", file_fd, size);

    if (size != 0 && (size != vfs_write(file_fd, (const char*)p, size)))
        return 1;
    NODE_DBG("write fd:%d,size:%d\n", file_fd, size);
    return 0;
}

static int node_compile(lua_State* L)
{
    Proto* f;
    int file_fd = FS_OPEN_OK - 1;
    size_t len;
    const char* fname = luaL_checklstring(L, 1, &len);
    if (len > FS_NAME_MAX_LENGTH)
        return luaL_error(L, "filename too long");

    char output[FS_NAME_MAX_LENGTH];
    c_strcpy(output, fname);
    // check here that filename end with ".lua".
    if (len < 4 || (c_strcmp(output + len - 4, ".lua") != 0))
        return luaL_error(L, "not a .lua file");

    output[c_strlen(output) - 2] = 'c';
    output[c_strlen(output) - 1] = '\0';
    NODE_DBG(output);
    NODE_DBG("\n");
    if (luaL_loadfsfile(L, fname) != 0)
    {
        return luaL_error(L, lua_tostring(L, -1));
    }

    f = toproto(L, -1);

    int stripping = 1; /* strip debug information? */

    file_fd = vfs_open(output, "w+");
    if (file_fd < FS_OPEN_OK)
    {
        return luaL_error(L, "cannot open/write to file");
    }

    lua_lock(L);
    int result = luaU_dump(L, f, writer, &file_fd, stripping);
    lua_unlock(L);

    if (vfs_flush(file_fd) < 0)
    {  // result codes aren't propagated by flash_fs.h
        // overwrite Lua error, like writer() does in case of a file io error
        result = 1;
    }
    vfs_close(file_fd);
    file_fd = FS_OPEN_OK - 1;

    if (result == LUA_ERR_CC_INTOVERFLOW)
    {
        return luaL_error(L, "value too big or small for target integer type");
    }
    if (result == LUA_ERR_CC_NOTINTEGER)
    {
        return luaL_error(L, "target lua_Number is integral but fractional value found");
    }
    if (result == 1)
    {  // result status generated by writer() or fs_flush() fail
        return luaL_error(L, "writing to file failed");
    }

    return 0;
}
